fixed some issues with notebooks

--- a/data_extraction/1_parsing_dataset_festival.ipynb
+++ b/data_extraction/1_parsing_dataset_festival.ipynb
@@ -1,40 +1,24 @@
 {
  "cells": [
   {
-<<<<<<< HEAD
-<<<<<<< HEAD
    "metadata": {},
    "cell_type": "code",
-=======
-   "cell_type": "code",
-   "metadata": {},
->>>>>>> 73e511a (Update database schema and add data processing scripts for film and director matching)
-=======
-   "metadata": {},
-   "cell_type": "code",
->>>>>>> 05b4317 (Update database schema and add data processing scripts for film and director matching)
    "source": [
     "!pip install mistralai tqdm psycopg2-binary sqlalchemy python-dotenv pandas termcolor openpyxl --quiet\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-<<<<<<< HEAD
-<<<<<<< HEAD
     "from database.getdata import query_data, get_connection, execute_query\n",
-=======
     "from getdata import query_data, get_connection, execute_query\n",
->>>>>>> 73e511a (Update database schema and add data processing scripts for film and director matching)
-=======
-    "from database.getdata import query_data, get_connection, execute_query\n",
->>>>>>> 05b4317 (Update database schema and add data processing scripts for film and director matching)
-    "import pandas as pd \n",
+    "import pandas as pd\n",
     "import os\n",
     "from mistralai import Mistral\n",
     "from dotenv import load_dotenv\n",
     "import tqdm\n",
     "\n",
     "import json\n",
+    "\n",
     "load_dotenv()"
    ],
    "outputs": [],
@@ -60,9 +44,9 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "filename = '../database/data/liste_festivals_renommes.csv'\n",
+    "filename = \"../database/data/liste_festivals_renommes.csv\"\n",
     "\n",
-    "df_festivals = pd.read_csv(filename, sep=';')\n",
+    "df_festivals = pd.read_csv(filename, sep=\";\")\n",
     "df_festivals.head()"
    ],
    "outputs": [],
@@ -72,7 +56,6 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "\n",
     "MISTRALAI_API_KEY = os.getenv(\"MISTRALAI_API_KEY\")\n",
     "model = \"mistral-large-latest\"\n",
     "client = Mistral(api_key=os.getenv(\"MISTRALAI_API_KEY\"))"
@@ -167,8 +150,7 @@
     "</schema>\n",
     "\"\"\"\n",
     "\n",
-    "prompt\n",
-    "\n"
+    "prompt"
    ],
    "outputs": [],
    "execution_count": null
