--- a/data_extraction/2_parsing_dataset_cheffes_postes.ipynb
+++ b/data_extraction/2_parsing_dataset_cheffes_postes.ipynb
@@ -12,13 +12,14 @@
     "from database.getdata import query_data, get_connection, execute_query\n",
     "from database.matching import find_matches, compare_names\n",
     "\n",
-    "import pandas as pd \n",
+    "import pandas as pd\n",
     "import os\n",
     "from mistralai import Mistral\n",
     "from dotenv import load_dotenv\n",
     "import tqdm\n",
     "\n",
     "import json\n",
+    "\n",
     "load_dotenv()"
    ],
    "outputs": [],
@@ -44,7 +45,9 @@
    "source": [
     "# read csv file data/Dataset5050_Cheffes de poste 2023.xlsx - LISTE_FINALE_FILMS_RETENUS.csv\n",
     "\n",
-    "df = pd.read_csv('../database/data/Dataset5050_Cheffes de poste 2023.xlsx - LISTE_FINALE_FILMS_RETENUS.csv')\n",
+    "df = pd.read_csv(\n",
+    "    \"../database/data/Dataset5050_Cheffes de poste 2023.xlsx - LISTE_FINALE_FILMS_RETENUS.csv\"\n",
+    ")\n",
     "df"
    ],
    "outputs": [],
@@ -53,23 +56,8 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "df['Femme_Real'].unique()\n",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "df['Bonus_Parité'].unique()",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
    "source": [
-    "df_cp = query_data('SELECT * FROM inegalites_cinema.cheffes_postes')\n",
-    "df_cp\n"
+    "df[\"Femme_Real\"].unique()"
    ],
    "outputs": [],
    "execution_count": null
@@ -78,7 +66,26 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "df_film = query_data('SELECT * FROM inegalites_cinema.film')\n",
+    "df[\"Bonus_Parité\"].unique()"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "df_cp = query_data(\"SELECT * FROM inegalites_cinema.cheffes_postes\")\n",
+    "df_cp"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "df_film = query_data(\"SELECT * FROM inegalites_cinema.film\")\n",
     "df_film"
    ],
    "outputs": [],
@@ -94,28 +101,42 @@
    "cell_type": "code",
    "source": [
     "for ii, row in tqdm.tqdm(df.iterrows(), total=df.shape[0]):\n",
-    "    film_name = row['Titre']\n",
-    "    visa = row['Visa'] if pd.notna(row['Visa']) else None\n",
-    "    genre_film = row['Genre_Film'] if pd.notna(row['Genre_Film']) else None\n",
-    "    bonus_parite = True if row['Bonus_Parité'] == 'x' else False\n",
-    "    devis = row['Devis'] if pd.notna(row['Devis']) else None\n",
-    "    femme_real = True if row['Femme_Real'] == 'Oui' else False\n",
+    "    film_name = row[\"Titre\"]\n",
+    "    visa = row[\"Visa\"] if pd.notna(row[\"Visa\"]) else None\n",
+    "    genre_film = row[\"Genre_Film\"] if pd.notna(row[\"Genre_Film\"]) else None\n",
+    "    bonus_parite = True if row[\"Bonus_Parité\"] == \"x\" else False\n",
+    "    devis = row[\"Devis\"] if pd.notna(row[\"Devis\"]) else None\n",
+    "    femme_real = True if row[\"Femme_Real\"] == \"Oui\" else False\n",
     "\n",
     "    # find film in database\n",
-    "    matches = find_matches(film_name, df_film, 'nom_originel')\n",
+    "    matches = find_matches(film_name, df_film, \"nom_originel\")\n",
     "\n",
     "    if len(matches) == 0:\n",
     "        # add row to dataframe df_film\n",
-    "        df_film = pd.concat([df_film, pd.DataFrame({'nom_originel': [film_name],\n",
-    "                                                    'n_visa_exploitation': [visa],\n",
-    "                                                    'genre': [genre_film],\n",
-    "                                                    'bonus_parite': [bonus_parite],\n",
-    "                                                    'devis': [devis],\n",
-    "                                                    'femme_realisatrice': [femme_real]\n",
-    "                                                    })], ignore_index=True)\n",
+    "        df_film = pd.concat(\n",
+    "            [\n",
+    "                df_film,\n",
+    "                pd.DataFrame(\n",
+    "                    {\n",
+    "                        \"nom_originel\": [film_name],\n",
+    "                        \"n_visa_exploitation\": [visa],\n",
+    "                        \"genre\": [genre_film],\n",
+    "                        \"bonus_parite\": [bonus_parite],\n",
+    "                        \"devis\": [devis],\n",
+    "                        \"femme_realisatrice\": [femme_real],\n",
+    "                    }\n",
+    "                ),\n",
+    "            ],\n",
+    "            ignore_index=True,\n",
+    "        )\n",
     "\n",
-    "df_film.drop(columns='id').to_sql('film', get_connection(),\n",
-    "                                 schema='inegalites_cinema', if_exists='append', index=False)"
+    "df_film.drop(columns=\"id\").to_sql(\n",
+    "    \"film\",\n",
+    "    get_connection(),\n",
+    "    schema=\"inegalites_cinema\",\n",
+    "    if_exists=\"append\",\n",
+    "    index=False,\n",
+    ")"
    ],
    "outputs": [],
    "execution_count": null
@@ -130,24 +151,37 @@
    "cell_type": "code",
    "source": [
     "for ii, row in tqdm.tqdm(df.iterrows(), total=df.shape[0]):\n",
-    "    cp_nom = row['Nom']\n",
-    "    cp_poste = row['Poste']\n",
-    "    cp_genre = row['Genre']\n",
+    "    cp_nom = row[\"Nom\"]\n",
+    "    cp_poste = row[\"Poste\"]\n",
+    "    cp_genre = row[\"Genre\"]\n",
     "\n",
-    "    matches = find_matches(cp_nom, df_cp, 'nom')\n",
+    "    matches = find_matches(cp_nom, df_cp, \"nom\")\n",
     "\n",
     "    # if matche get first name\n",
     "    if len(matches) >= 1:\n",
-    "        cp_nom = matches.iloc[0]['nom']\n",
+    "        cp_nom = matches.iloc[0][\"nom\"]\n",
     "\n",
-    "    df_cp = pd.concat([df_cp, pd.DataFrame({\n",
-    "                                            'nom': [cp_nom],\n",
-    "                                            'type_de_poste': [cp_poste],\n",
-    "                                            'genre': [cp_genre],\n",
-    "                                            })], ignore_index=True)\n",
+    "    df_cp = pd.concat(\n",
+    "        [\n",
+    "            df_cp,\n",
+    "            pd.DataFrame(\n",
+    "                {\n",
+    "                    \"nom\": [cp_nom],\n",
+    "                    \"type_de_poste\": [cp_poste],\n",
+    "                    \"genre\": [cp_genre],\n",
+    "                }\n",
+    "            ),\n",
+    "        ],\n",
+    "        ignore_index=True,\n",
+    "    )\n",
     "df_cp = df_cp.drop_duplicates()\n",
-    "df_cp.drop(columns='id').to_sql('cheffes_postes', get_connection(),\n",
-    "                                 schema='inegalites_cinema', if_exists='append', index=False)"
+    "df_cp.drop(columns=\"id\").to_sql(\n",
+    "    \"cheffes_postes\",\n",
+    "    get_connection(),\n",
+    "    schema=\"inegalites_cinema\",\n",
+    "    if_exists=\"append\",\n",
+    "    index=False,\n",
+    ")"
    ],
    "outputs": [],
    "execution_count": null
