[FIX] Add roles

--- a/frontend/src/locales/fr-FR.json
+++ b/frontend/src/locales/fr-FR.json
@@ -16,6 +16,34 @@
     "composer": "Auteur·rice de la musique",
     "executive_producer": "Producteur·rice délégué·e",
     "director": "Réalisateur·rice",
-    "screenwriter": "Scénariste"
+    "screenwriter": "Scénariste",
+    "writer": "Auteur",
+    "actor": "Acteur",
+    "music_producer": "Producteur musical",
+    "music_supervisor": "Superviseur musical",
+    "producer": "Producteur",
+    "second_assistant_director": "2ème assistant réalisateur",
+    "second_unit_director": "Réalisateur de 2nd équipe",
+    "choreographer": "Chorégraphe",
+    "colorist": "Etalonneur",
+    "costume_supervisor": "Superviseur des costumes",
+    "head_hair_stylist": "Chef coiffeur",
+    "head_makeup_artist": "Chef maquilleur",
+    "special_effects_makeup": "Effets spéciaux maquillage",
+    "post_production_supervisor": "Superviseur post-production",
+    "script_supervisor": "Scripte",
+    "stunt_coordinator": "Chef Cascadeur",
+    "production_company": "Société de production",
+    "distribution_company": "Société de distribution",
+    "dialogue_editor": "Monteur dialogue",
+    "sound_editor": "Monteur son",
+    "unit_production_manager": "Régisseur général",
+    "production_coordinator": "Coordinateur de production",
+    "press_officer": "Attaché de presse",
+    "visual_effects_coordinator": "Coordinateur effets visuels",
+    "gaffer": "Chef électricien",
+    "mixing_engineer": "Mixage",
+    "visual_effects_supervisor": "Superviseur des effets visuels",
+    "co_producer": "Coproducteur"
   }
 }
