[FRONT] [FIX] Ajout des écritures inclusives aux rôles

--- a/frontend/src/locales/fr-FR.json
+++ b/frontend/src/locales/fr-FR.json
@@ -17,33 +17,33 @@
     "executive_producer": "Producteur·rice délégué·e",
     "director": "Réalisateur·rice",
     "screenwriter": "Scénariste",
-    "writer": "Auteur",
-    "actor": "Acteur",
-    "music_producer": "Producteur musical",
-    "music_supervisor": "Superviseur musical",
-    "producer": "Producteur",
-    "second_assistant_director": "2ème assistant réalisateur",
-    "second_unit_director": "Réalisateur de 2nd équipe",
+    "writer": "Auteur·rice",
+    "actor": "Acteur·rice",
+    "music_producer": "Producteur·rice musical·e",
+    "music_supervisor": "Superviseur·rice musical·e",
+    "producer": "Producteur·rice",
+    "second_assistant_director": "2ème assistant·e réalisateur·rice",
+    "second_unit_director": "Réalisateur·rice de 2nd équipe",
     "choreographer": "Chorégraphe",
-    "colorist": "Etalonneur",
-    "costume_supervisor": "Superviseur des costumes",
-    "head_hair_stylist": "Chef coiffeur",
-    "head_makeup_artist": "Chef maquilleur",
+    "colorist": "Etalonneur·euse",
+    "costume_supervisor": "Superviseur.euse des costumes",
+    "head_hair_stylist": "Chef·fe coiffeur",
+    "head_makeup_artist": "Chef·fe maquilleur·euse",
     "special_effects_makeup": "Effets spéciaux maquillage",
-    "post_production_supervisor": "Superviseur post-production",
+    "post_production_supervisor": "Superviseur·euse post-production",
     "script_supervisor": "Scripte",
-    "stunt_coordinator": "Chef Cascadeur",
+    "stunt_coordinator": "Chef·fe Cascadeur·euse",
     "production_company": "Société de production",
     "distribution_company": "Société de distribution",
-    "dialogue_editor": "Monteur dialogue",
-    "sound_editor": "Monteur son",
-    "unit_production_manager": "Régisseur général",
-    "production_coordinator": "Coordinateur de production",
-    "press_officer": "Attaché de presse",
-    "visual_effects_coordinator": "Coordinateur effets visuels",
-    "gaffer": "Chef électricien",
+    "dialogue_editor": "Monteur·euse dialogue",
+    "sound_editor": "Monteur·euse son",
+    "unit_production_manager": "Régisseur·euse général",
+    "production_coordinator": "Coordinateur·rice de production",
+    "press_officer": "Attaché·e de presse",
+    "visual_effects_coordinator": "Coordinateur·rice effets visuels",
+    "gaffer": "Chef·fe électricien·ne",
     "mixing_engineer": "Mixage",
-    "visual_effects_supervisor": "Superviseur des effets visuels",
-    "co_producer": "Coproducteur"
+    "visual_effects_supervisor": "Superviseur·euse des effets visuels",
+    "co_producer": "Coproducteur·rice"
   }
 }
