ui (components): add Bluesky icon and update UI

--- a/frontend/src/locales/fr-FR.json
+++ b/frontend/src/locales/fr-FR.json
@@ -1,9 +1,9 @@
 {
   "distribution": {
-    "production": "Produit par",
-    "distribution": "Distribué par",
-    "co-production": "Co-produit par",
-    "financiers": "Financé par"
+    "production": "Production",
+    "distribution": "Distribution",
+    "co-production": "Co-production",
+    "financiers": "Diffusion"
   },
   "roles": {
     "first_assistant_director": "Assistant·e à la réalisation",
